--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <!-- End of Boostrap! -->
   </head>
   <body>
+    <center><img src='/jhf_logo.png' alt='JHF Logo'><br>
+      <h1>JHF Research & Marketing</h1>
+      <p>Digital marketing strategy, automation, and graphic design services based in San Francisco, California.</p>
   </body>
 </html>
