--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <center><img src='/jhf_logo.png' alt='JHF Logo'><br>
       <h1>JHF Research & Marketing</h1>
-      <p>Digital marketing strategy, automation, and graphic design services based in San Francisco, California.</p>
+      <p>Digital marketing strategy, automation, and graphic design services based in San Francisco, California.</p></center>
   </body>
 </html>
