--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <!-- End of Boostrap! -->
   </head>
   <body>
-    <center><img src='/jhf_logo.png' alt='JHF Logo'><br>
+    <div id="content" style="text-align:center; margin-top:10%">
+      <img src='/jhf_logo.png' alt='JHF Logo'><br>
       <h1>JHF Research & Marketing</h1>
-      <p>Digital marketing strategy, automation, and graphic design services based in San Francisco, California.</p></center>
+      <p>Digital marketing strategy, automation, and graphic design services based in San Francisco, California.</p>
+    </div>
   </body>
 </html>
