--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
   <html lang="en">
   <head>
+    <title>JHF Research & Marketing Services</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
+  <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
+  <meta name="author" content="JHF">
   <!-- Bootstrap! -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -12,7 +17,7 @@
     <div id="content" style="text-align:center; margin-top:10%">
       <img src='/jhf_logo.png' alt='JHF Logo'><br>
       <h1>JHF Research & Marketing</h1>
-      <p>Digital marketing strategy, automation, and graphic design services based in San Francisco, California.</p>
+      <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
     </div>
   </body>
 </html>
