Cleaned up HTML

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});varf=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-KV2WXQJ');</script>
+    <!-- End Tag Manager -->
     <title>JHF Research & Marketing Services</title>
     <meta charset="UTF-8">
     <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
@@ -13,11 +16,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- End of Boostrap! -->
     </head>
-    <body>
-      <div id="content" style="text-align:center; margin-top:10%">
-        <img src='/jhf_logo.png' alt='JHF Logo'><br>
-        <h1>JHF Research & Marketing</h1>
-        <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
-      </div>
-    </body>
+  <body>
+    <!-- Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- Tag Manager (noscript) -->
+    <div id="content" style="text-align:center; margin-top:10%">
+      <img src='/jhf_logo.png' alt='JHF Logo'><br>
+      <h1>JHF Research & Marketing</h1>
+      <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
+    </div>
+  </body>
 </html>
