--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
-    <div id="content" style="text-align:center; margin-top:10%">
+    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:900px;">
       <img src='/jhf_logo.png' alt='JHF Logo'><br>
       <h1>JHF Research & Marketing</h1>
       <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
