--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
     <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
     <meta name="author" content="JHF">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <!-- Bootstrap! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -26,8 +27,9 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:900px;">
-      <img src='/jhf_logo.png' alt='JHF Logo'><br>
+      <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
+      <h2>"We do the technical stuff so marketing teams can <style="font-family: 'Pacifico'"Just Have Fun</style>."
       <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
     </div>
   </body>
