--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:900px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
-      <h2>"We do the technical stuff so marketing teams can <style="font-family: 'Pacifico'"Just Have Fun</style>."
+      <h2>"We do the technical stuff so marketing teams can <style="font-family: 'Pacifico'">Just Have Fun</style>."
       <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
     </div>
   </body>
