--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     })(window,document,'script','dataLayer','GTM-KV2WXQJ');</script>
     <!-- End Tag Manager -->
     <title>JHF Research & Marketing Services</title>
-    <link rel="shortcut icon" href="jhf.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/jhf.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
     <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
@@ -30,7 +30,7 @@
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:900px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
-      <h3>"We do the technical stuff so marketing teams can<br><style="font-family:Pacifico">Just Have Fun</style>."</h3>
+      <h4>"We do the technical stuff so marketing teams can <style="font-family:Pacifico;">Just Have Fun</style>."</h4>
       <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
     </div>
   </body>
