--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
-    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:800px;">
+    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
-      <h4>"We do the technical stuff so marketing teams can <style="font-family:Pacifico;">Just Have Fun</style>."</h4>
+      <h4>"We do the technical stuff so marketing teams can <style="font-family:'Pacifico';">Just Have Fun</style>."</h4>
       <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
     </div>
   </body>
