--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
-      <p style="font-size:20px;">"We do the technical stuff so marketing teams can <style="font-family:'Pacifico';">Just Have Fun</style>."</p>
+      <p style="font-size:20px;">"We do the technical stuff so marketing teams can <style="font-family:'Pacifico';">just have fun.</style>"</p>
       <p>Digital marketing strategy, automation, and administration services based in San Francisco, California.</p>
     </div>
   </body>
