--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
-      <h2>Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
-      <h3 style="font-size:20px;">"We do the technical stuff so marketing teams can <h3 style="font-family:'Pacifico'; display:inline;">just have fun.</style>"</h3>
+      <h2 style="font-size:42px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
+      <h3 style="font-size:32px; font-family:'Pacifico';">"We do the technical stuff so marketing teams can just have fun."</h3>
     </div>
   </body>
 </html>
