--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
-      <h2 style="font-size:32px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
-      <h3 style="font-size:12px; font-family:'Pacifico';">"Let marketing teams just have fun."</h3>
+      <h2 style="font-size:22px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
+      <h3 style="font-size:22px; font-family:'Pacifico';">"Let marketing teams <u>just have fun<u>."</h3>
     </div>
   </body>
 </html>
