--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,44 @@
-<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-<script>
-  hbspt.forms.create({
-	portalId: "6461331",
-	formId: "61640d81-2cd1-4f97-8f2c-9a6755a5da73"
-});
-</script>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KV2WXQJ');</script>
+    <!-- End Tag Manager -->
+    <title>JHF Research & Marketing Services</title>
+    <link rel="shortcut icon" href="/jhf.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
+    <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
+    <meta name="author" content="JHF">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <!-- Bootstrap! -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- End of Boostrap! -->
+    </head>
+  <body>
+    <!-- Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- Tag Manager (noscript) -->
+    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
+      <img src='/jhf_logo.png' alt='JHF Logo'>
+      <h1>JHF Research & Marketing</h1>
+      <h2 style="font-size:22px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
+      <h3 style="font-size:32px; font-family:'Pacifico'; color:#424242;">"Let marketing teams <u>just have fun</u>."</h3>
+	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+	<script>
+  	hbspt.forms.create({
+		portalId: "6461331",
+		formId: "61640d81-2cd1-4f97-8f2c-9a6755a5da73"
+	});
+	</script>
+    </div>
+  </body>
+</html>
