--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
-      <h1>JHF Research & Marketing</h1>
-      <h2 style="font-size:22px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
+      <h1>Contact Us</h1>
+      <h2 style="font-size:22px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2>
       <h3 style="font-size:32px; font-family:'Pacifico'; color:#424242;">"Let marketing teams <u>just have fun</u>."</h3>
 	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
 	<script>
