--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>Contact Us</h1>
       <h2 style="font-size:22px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2>
-      <h3 style="font-size:32px; font-family:'Pacifico'; color:#424242;">"Let marketing teams <u>just have fun</u>."</h3>
+	<div style="width:600px; margin:auto">
 	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
 	<script>
   	hbspt.forms.create({
@@ -39,6 +39,7 @@
 		formId: "61640d81-2cd1-4f97-8f2c-9a6755a5da73"
 	});
 	</script>
+	</div>
     </div>
   </body>
 </html>
