--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <title>JHF Research & Marketing Services</title>
     <link rel="shortcut icon" href="/jhf.ico" type="image/x-icon">
     <meta charset="UTF-8">
-    <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
-    <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
+    <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Contact us to learn more.">
+    <meta name="keywords" content="Contact">
     <meta name="author" content="JHF">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <!-- Bootstrap! -->
@@ -28,18 +28,15 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
-      <img src='/jhf_logo.png' alt='JHF Logo'>
+      <a href="/"><img src='/jhf_logo.png' alt='JHF Logo'></a>
       <h1>Contact Us</h1>
-      <h2 style="font-size:22px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2>
-	<div style="width:600px; margin:auto">
-	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+      <h2 style="font-size:22px; margin-bottom:10px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2><script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
 	<script>
   	hbspt.forms.create({
 		portalId: "6461331",
 		formId: "61640d81-2cd1-4f97-8f2c-9a6755a5da73"
 	});
 	</script>
-	</div>
     </div>
   </body>
 </html>
