--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,16 @@
     <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
       <a href="/"><img src='/jhf_logo.png' alt='JHF Logo'></a>
       <h1>Contact Us</h1>
-      <h2 style="font-size:22px; margin-bottom:10px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2><script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+      <h2 style="font-size:22px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2>
+        <p style="margin:auto;">
+	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
 	<script>
   	hbspt.forms.create({
 		portalId: "6461331",
 		formId: "61640d81-2cd1-4f97-8f2c-9a6755a5da73"
 	});
 	</script>
+	</p>
     </div>
   </body>
 </html>
