--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       <a href="/"><img src='/jhf_logo.png' alt='JHF Logo'></a>
       <h1>Contact Us</h1>
       <h2 style="font-size:22px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2>
-        <p style="margin:auto;">
+        <p style="padding-left:50px;">
 	<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
 	<script>
   	hbspt.forms.create({
