--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     })(window,document,'script','dataLayer','GTM-KV2WXQJ');</script>
     <!-- End Tag Manager -->
     <title>JHF Research & Marketing Services</title>
-    <link rel="shortcut icon" href="/jhf.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/jhf.ico">
     <meta charset="UTF-8">
     <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
     <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
