--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     })(window,document,'script','dataLayer','GTM-KV2WXQJ');</script>
     <!-- End Tag Manager -->
     <title>JHF Research & Marketing Services</title>
-    <link rel="shortcut icon" href="/jhf.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Contact us to learn more.">
     <meta name="keywords" content="Contact">
@@ -27,7 +27,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
-    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
+    <div id="content" style="text-align:center; margin:auto; margin-top:5%; max-width:600px;">
       <a href="/"><img src='/jhf_logo.png' alt='JHF Logo'></a>
       <h1>Contact Us</h1>
       <h2 style="font-size:22px;">Contact us for information about our digital marketing strategy, automation, and administration services.</h2>
