--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
-    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px;">
+    <div id="content" style="text-align:center; margin:auto; margin-top:10%; max-width:600px; color:#424242;">
       <img src='/jhf_logo.png' alt='JHF Logo'>
       <h1>JHF Research & Marketing</h1>
       <h2 style="font-size:22px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
-      <h3 style="font-size:32px; font-family:'Pacifico'; color:#424242;">"Let marketing teams <u>just have fun</u>."</h3>
+      <h3 style="font-size:32px; font-family:'Pacifico';">"Let marketing teams <u>just have fun</u>."</h3>
       <p style=padding-top:20px;><a href="/contact.html" class="btn btn-lg btn-success">Contact Us</a></p>
     </div>
   </body>
