--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- End of Boostrap! -->
+    <!-- Google Font! -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <!-- End of Google Font! -->
     </head>
   <body>
     <!-- Tag Manager (noscript) -->
@@ -28,10 +31,9 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:5%; max-width:600px; color:#424242;">
-      <img src='/jhf_logo.png' alt='JHF Logo'>
-      <h1>JHF Research & Marketing</h1>
-      <h2 style="font-size:22px;">Digital marketing strategy, automation, and administration services based in San Francisco, California.</h2>
-      <h3 style="font-size:32px; font-family:'Pacifico';">"Let marketing teams <u>just have fun</u>."</h3>
+      <h1 style="font-size:100px;">Skyler<br>Villain</h1>
+      <h2 style="font-size:22px;">DJ and music artist based in San Francisco, California.</h2>
+      <h3 style="font-size:32px; font-family:'Permanent Marker';">See you tonight!</h3>
       <p style=padding-top:20px;><a href="/contact.html" class="btn btn-lg btn-success">Contact Us</a></p>
     </div>
   </body>
