--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Tag Manager -->
+    <!-- Tag Manager
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KV2WXQJ');</script>
     <!-- End Tag Manager -->
-    <title>JHF Research & Marketing Services</title>
+    <title>Skyler Villain | San Francisco DJ & Artist</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <meta charset="UTF-8">
-    <meta name="description" content="JHF provides digital marketing strategy, automation, and SEO services. Based in San Francisco, California and serving global clients.">
+    <meta name="description" content="Skyler Villain is a DJ and music artist in San Francisco, California.">
     <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
     <meta name="author" content="JHF">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
@@ -26,7 +26,7 @@
     <!-- End of Google Font! -->
     </head>
   <body>
-    <!-- Tag Manager (noscript) -->
+    <!-- Tag Manager (noscript)
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KV2WXQJ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
