--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <meta name="description" content="Skyler Villain is a DJ and music artist in San Francisco, California.">
     <meta name="keywords" content="Marketing,Research,Automation,SEO,Strategy">
     <meta name="author" content="JHF">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <!-- Bootstrap! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -31,7 +30,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:5%; max-width:600px; color:#424242;">
-      <h1 style="font-size:100px;">Skyler<br>Villain</h1>
+      <h1 style="font-size:120px; font-family:'Permanent Marker';">Skyler<br>Villain</h1>
       <h2 style="font-size:22px;">DJ and music artist based in San Francisco, California.</h2>
       <h3 style="font-size:32px; font-family:'Permanent Marker';">See you tonight!</h3>
       <p style=padding-top:20px;><a href="/contact.html" class="btn btn-lg btn-success">Contact Us</a></p>
