--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:5%; max-width:600px; color:#424242;">
-      <h1 style="font-size:120px; font-family:'Permanent Marker';">Skyler<br>Villain</h1>
-      <h2 style="font-size:22px;">DJ and music artist based in San Francisco, California.</h2>
+      <h1 style="font-size:120px; font-family:'Permanent Marker'; line-height:100px;">Skyler<br>Villain</h1>
+      <h2 style="font-size:22px; font-family:'Permanent Marker';">DJ and music artist based in San Francisco, California.</h2>
       <h3 style="font-size:32px; font-family:'Permanent Marker';">See you tonight!</h3>
       <p style=padding-top:20px;><a href="/contact.html" class="btn btn-lg btn-success">Contact Us</a></p>
     </div>
