--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- End of Boostrap! -->
     <!-- Google Font! -->
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Shadows+Into+Light&display=swap" rel="stylesheet">
     <!-- End of Google Font! -->
     </head>
   <body>
@@ -31,9 +31,8 @@
     <!-- Tag Manager (noscript) -->
     <div id="content" style="text-align:center; margin:auto; margin-top:5%; max-width:600px; color:#424242;">
       <h1 style="font-size:120px; font-family:'Permanent Marker'; line-height:100px;">Skyler<br>Villain</h1>
-      <h2 style="font-size:22px; font-family:'Permanent Marker';">DJ and music artist based in San Francisco, California.</h2>
-      <h3 style="font-size:32px; font-family:'Permanent Marker';">See you tonight!</h3>
-      <p style=padding-top:20px;><a href="/contact.html" class="btn btn-lg btn-success">Contact Us</a></p>
+      <h2 style="font-size:22px; font-family:'Shadows Into Light'; margin-top:20px;">DJ and music artist based in San Francisco, California.</h2>
+      <!-- <p style=padding-top:20px;><a href="/contact.html" class="btn btn-lg btn-success">Contact Us</a></p> -->
     </div>
   </body>
 </html>
